tests/ui/pattern/usefulness/match-byte-array-patterns-2.stderr
error[E0004]: match is non-exhaustive
  --> $DIR/match-byte-array-patterns-2.rs:4:11
   |
LL |     match buf {
   |           ^^^ patterns `&[0_u8..=64_u8, _, _, _]` and `&[66_u8..=u8::MAX, _, _, _]` not covered
   |
   = note: the matched value is of type `&[u8; 4]`
help: ensure that all possible cases are being handled by adding more match arms
   |
LL ~         b"AAAA" => {}
LL +         &[0_u8..=64_u8, _, _, _] => { todo!() }
LL +         &[66_u8..=u8::MAX, _, _, _] => { todo!() }
   |

error[E0004]: match is non-exhaustive
  --> $DIR/match-byte-array-patterns-2.rs:10:11
   |
LL |     match buf {
   |           ^^^ patterns `&[]`, `&[_]`, `&[_, _]` and 2 more not covered
   |
   = note: the matched value is of type `&[u8]`
help: ensure that all possible cases are being handled by adding more match arms
   |
LL ~         b"AAAA" => {}
LL +         &[] => { todo!() }
LL +         &[_] => { todo!() }
LL +         &[_, _] => { todo!() }
LL +         _ => { todo!() }
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
